# monobrown

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
crates/descendit/: Cargo.toml  README.md
crates/descendit-ra/: Cargo.toml  README.md
crates/descendit-ra/src/: call_graph.rs  cardinality.rs  lib.rs  output.rs  session.rs
crates/descendit/examples/: STRESS_TEST_JOURNAL.md  STRESS_TEST_JOURNAL_2.md  STRESS_TEST_JOURNAL_3.md
crates/descendit/examples/sample-crate/: .gitignore  Cargo.toml
crates/descendit/examples/sample-crate/src/: config.rs  ingest.rs  lib.rs  output.rs  transform.rs
crates/descendit/examples/state-explosion/: Cargo.toml
crates/descendit/examples/state-explosion/src/: connection.rs  lib.rs  pool.rs  request.rs  session.rs
crates/descendit/src/: analyze.rs  compliance.rs  diff.rs  experiment.rs  explore.rs  guide.md  lib.rs  main.rs  metrics.rs  rollup.rs  semantic_runtime.rs  server.rs
crates/descendit/src/loss/: bloat.rs  code_economy.rs  coupling_density.rs  mod.rs
crates/descendit/src/snapshots/: descendit__explore__tests__details_root_narrow_after_72x24.snap  descendit__explore__tests__details_scrolled_after_120x24.snap  descendit__explore__tests__details_second_child_after_120x24.snap
crates/descendit/tests/: benchmarks.rs  golden_analysis.rs  integration_cli.rs  scenario_invariants.rs
crates/descendit/tests/fixtures/: empty_semantic.json
crates/descendit/tests/fixtures/golden/: bloated.rs  clean.rs  complex_types.rs  duplicated.rs  mixed.rs  overhead.rs
crates/descendit/tests/snapshots/: golden_analysis__analyze_aggregate.snap  golden_analysis__analyze_bloated.snap  golden_analysis__analyze_clean.snap  golden_analysis__analyze_complex_types.snap  golden_analysis__analyze_duplicated.snap  golden_analysis__analyze_mixed.snap  golden_analysis__analyze_overhead.snap  golden_analysis__heatmap_golden.snap  golden_analysis__list_dimensions.snap
crates/descendit/tests/support/: benchmark_cases.rs
crates/mb-tui/: Cargo.toml
crates/mb-tui/examples/: devkit_agent_dispatch_playground.rs  devkit_bar_selector_playground.rs  devkit_editable_rules_playground.rs  devkit_flame_graph_playground.rs  devkit_flashcard_playground.rs  devkit_hotkey_coach_playground.rs  devkit_lens_switcher_playground.rs  devkit_palette_playground.rs  devkit_queue_playground.rs  devkit_rearview_mirror_playground.rs  devkit_shimmer_playground.rs  devkit_slider_playground.rs  devkit_spinner_playground.rs  devkit_stack_playground.rs  devkit_stepper_playground.rs  devkit_tab_bar_playground.rs  devkit_vim_editor_playground.rs
crates/mb-tui/src/: highlight.rs  lib.rs
crates/mb-tui/src/devkit/: command_palette.rs  flashcard_demo.rs  frame_tape.rs  playground.rs  progress_demo.rs  queue_demo.rs  rearview_mirror_demo.rs  stepper_demo.rs  vim_editor.rs
crates/mb-tui/src/devkit/snapshots/: mb_tui__devkit__scenario__collapsed_20x6.snap  mb_tui__devkit__scenario__deep_80x10.snap  mb_tui__devkit__scenario__exit-behavior_after_50x4.snap  mb_tui__devkit__scenario__loading_40x1.snap  (+14 more)
crates/mb-tui/src/input/: render_effect.rs
crates/mb-tui/src/render/: cached.rs  heatmap.rs  layout_flex.rs  layout_grid.rs  layout_renderable.rs
crates/mb-tui/src/theme/: mod.rs
crates/mb-tui/src/tree/: render.rs
crates/mb-tui/src/widget/: bar_selector.rs  eta_display.rs  flashcard.rs  hotkey.rs  mod.rs  progress_bar.rs  range_slider.rs  separator.rs  shimmer.rs  spinner.rs  stepper.rs  vim_editor.rs
crates/mb-tui/tests/: bar_selector_renderable.rs  devkit_command_palette.rs  devkit_flame_graph.rs  devkit_palette_integration.rs  devkit_playground_keys.rs  devkit_spinner.rs  devkit_vim_editor.rs  flame_graph_adversarial.rs  flame_graph_animation_experiment.rs  flame_graph_bar_style_experiment.rs  flame_graph_expectations.rs  frame_tape_shimmer.rs  layout_renderable.rs
crates/tui-lib/: Cargo.toml
crates/tui-lib/examples/: devkit_agent_dispatch_playground.rs  devkit_bar_selector_playground.rs  devkit_editable_rules_playground.rs  devkit_flame_graph_playground.rs  devkit_flashcard_playground.rs  devkit_gauge_playground.rs  devkit_grid_playground.rs  devkit_hotkey_coach_playground.rs  devkit_lens_switcher_playground.rs  devkit_notification_sidebar_playground.rs  devkit_palette_playground.rs  devkit_playground.rs  devkit_progress_playground.rs  devkit_queue_playground.rs  devkit_rearview_mirror_playground.rs  devkit_shimmer_playground.rs  devkit_slider_playground.rs  devkit_sparkline_playground.rs  devkit_spinner_playground.rs  devkit_stack_playground.rs  devkit_stepper_playground.rs  devkit_tab_bar_playground.rs  devkit_theme_picker.rs  devkit_vim_editor_playground.rs
crates/tui-lib/src/: command_palette.rs  markdown.rs
crates/tui-lib/src/devkit/: README.md  bar_selector.rs  color.rs  dispatch_demo.rs  flame_graph.rs  gauge_demo.rs  hotkey_coach_demo.rs  mod.rs  scenario.rs  simple_widgets.rs  slider_demo.rs  sparkline_demo.rs  surface.rs  tab_bar_demo.rs  text.rs  unified.rs
crates/tui-lib/src/input/: event_queue.rs  mod.rs  modal.rs  render_scheduler.rs
crates/tui-lib/src/render/: layout_pager.rs  layout_stack.rs  line_utils.rs  mod.rs  overflow.rs  renderable.rs
crates/tui-lib/src/theme/: palette.rs
crates/tui-lib/src/tree/: mod.rs  state.rs
crates/tui-lib/src/widget/: gauge.rs  hotkey_coach.rs  queue_list.rs  sparkline.rs  tab_bar.rs  vim_editor.rs
crates/tui-lib/tests/: bar_selector_renderable.rs  devkit_bar_selector.rs  devkit_command_palette.rs  devkit_flame_graph.rs  devkit_palette_integration.rs  devkit_playground_keys.rs  devkit_shimmer.rs  devkit_spinner.rs  devkit_vim_editor.rs  flame_graph_adversarial.rs  flame_graph_animation_experiment.rs  flame_graph_bar_style_experiment.rs  flame_graph_expectations.rs  frame_tape_bar_selector.rs  frame_tape_shimmer.rs  hotkey_widgets.rs  layout_renderable.rs
(+61 files in other folders)
