[workspace]
resolver = "3"
members = ["descendit", "crates/descendit-ra"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/owen-d/monobrown"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
descendit-ra = { path = "crates/descendit-ra", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
