[workspace]
resolver = "3"
members = ["crates/descendit", "crates/descendit-ra", "crates/mb-tui"]
exclude = ["crates/descendit/examples/sample-crate", "crates/descendit/examples/state-explosion"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/owen-d/monobrown"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
descendit-ra = { path = "crates/descendit-ra", version = "0.0.1" }
mb-tui = { path = "crates/mb-tui", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
crossterm = "0.29.0"
insta = "1.43.2"
libc = "0.2.175"
pulldown-cmark = "0.10"
ratatui = "0.30.0"
similar = "2.7.0"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-onig", "plist-load"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-width = "0.2"
